--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,11 @@
 services:
   - type: web
-    name: btc-trading-bot
+    name: btc-bot
     env: python
     plan: free
-    buildCommand: ""
-    startCommand: "python main.py"
+    buildCommand: pip install -r requirements.txt
+    startCommand: python main.py
+    runtime: python3.10
     envVars:
       - key: BINANCE_API_KEY
         value: your_api_key_here
