--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ setuptools>=67.0.0
 wheel
 pip
 pandas
-pandas_ta
+git+https://github.com/twopirllc/pandas-ta.git@development
 requests
 flask
 python-binance
